Adding Fun Fact

--- a/content/about/who_am_i.html
+++ b/content/about/who_am_i.html
@@ -1,5 +1,5 @@
 ---
-title: "who_am_i"
+title: "Who Am I ?"
 author: "Thomas Giannetti-Fakhoury"
 output: html_document
 ---
@@ -7,10 +7,7 @@ output: html_document
 <script src="/rmarkdown-libs/header-attrs/header-attrs.js"></script>
 
 
-<div id="who-am-i" class="section level3">
-<h3>Who am i?</h3>
 <p>My name is <strong>Thomas Giannetti-Fakhoury</strong>, I am 22 years old and I was born in Cannes in the South of France. I am both <strong>French</strong> and <strong>Ivorian</strong> and am also of <strong><em>Lebanese</em></strong> and <strong><em>Italian</em></strong> origin.</p>
-</div>
 <div id="my-education-my-work." class="section level3">
 <h3>My education &amp; my work.</h3>
 <p>I studied:</p>
