Change to Fun fact

--- a/content/fun_fact/fun_fact.html
+++ b/content/fun_fact/fun_fact.html
@@ -1,16 +1,13 @@
 ---
-title: "What Else ?"
+title: "What Happens When I Code ?"
 output: html_document
 ---
 
 <script src="/rmarkdown-libs/header-attrs/header-attrs.js"></script>
 
 
-<div id="what-happens-when-i-code" class="section level3">
-<h3>What Happens When I Code ?</h3>
 <p>It happens, although those remain rare one-time events, that my anger gets the best of me when I can’t figure out a code. Here is my latest example, while building this website:</p>
 <div class="figure">
 <img src="/Users/thomasgiannetti/my_website/static/img/im10.jpg" alt="" />
 <p class="caption">Computer 1</p>
-</div>
 </div>
