Website Changes CV

--- a/content/about/who_am_i.html
+++ b/content/about/who_am_i.html
@@ -9,25 +9,8 @@ output: html_document
 
 <p>My name is <strong>Thomas Giannetti-Fakhoury</strong>, I am 22 years old and I was born in Cannes in the South of France. I am both <strong>French</strong> and <strong>Ivorian</strong> and am also of <strong><em>Lebanese</em></strong> and <strong><em>Italian</em></strong> origin.</p>
 <div id="my-education-my-work." class="section level3">
-<h3>My education &amp; my work.</h3>
-<p>I studied:</p>
-<ol style="list-style-type: decimal">
-<li>Finance at <strong>Bocconi University</strong></li>
-<li>FinTech during a Summer Programme at <strong>Oxford University</strong></li>
-<li>Data Science at <strong>Le Wagon</strong> in London</li>
-</ol>
-<div class="figure">
-<img src="/Users/thomasgiannetti/my_website/static/img/slide1.jpg" alt="" />
-<p class="caption">Education</p>
-</div>
-<p>I worked:</p>
-<ol style="list-style-type: decimal">
-<li>As a Financial Analyst at <strong>PFO Group</strong></li>
-<li>In Private Equity at <strong>AfricInvest Group</strong></li>
-<li>As a TEDx Organiser with <strong>TEDxTreichville</strong></li>
-</ol>
-<div class="figure">
-<img src="/Users/thomasgiannetti/my_website/static/img/Slide2.jpg" alt="" />
-<p class="caption">Work</p>
-</div>
+<h3>My education &amp; My Work.</h3>
+<p>I studied Finance at <strong>Bocconi University</strong>, FinTech during a Summer Programme at <strong>Oxford University</strong>,Data Science at <strong>Le Wagon</strong> in London and am currently reading for the Masters in Analytics and Management at <strong>London Business School</strong>.</p>
+<p>I worked as a financial analyst for <strong>PFO Group</strong>, a private equity analyst intern at <strong>AfricInvest Group</strong> and a TEDx Organiser with <strong>TEDxTreichville</strong>.</p>
+<p><img src="/img/slide1.jpg" width="60%" style="display: block; margin: auto;" /><img src="/img/Slide2.jpg" width="60%" style="display: block; margin: auto;" /></p>
 </div>
