--- a/content/cv/cv_TGF.html
+++ b/content/cv/cv_TGF.html
@@ -1,10 +1,10 @@
 ---
-title: "cv_TGF"
+title: "My CV"
 output: html_document
 ---
 
 <script src="/rmarkdown-libs/header-attrs/header-attrs.js"></script>
 
 
-<p>Hello this is my Cv
-#{{&lt; embed-pdf url=“static/cv/cv_TGF.pdf” &gt;}}</p>
+<p><img src="/img/CV.jpg" width="60%" style="display: block; margin: auto;" /></p>
+<p>You can view and download my CV by clicking <a href="https://drive.google.com/file/d/1pBdxlL3M-WGnqvHbLDS-5vVjEbLxfTXH/view?usp=sharing">here</a>.</p>
