--- a/content/fun_fact/fun_fact.html
+++ b/content/fun_fact/fun_fact.html
@@ -7,7 +7,4 @@ output: html_document
 
 
 <p>It happens, although those remain rare one-time events, that my anger gets the best of me when I can’t figure out a code. Here is my latest example, while building this website:</p>
-<div class="figure">
-<img src="/Users/thomasgiannetti/my_website/static/img/im10.jpg" alt="" />
-<p class="caption">Computer 1</p>
-</div>
+<p><img src="/img/im10.jpg" width="60%" style="display: block; margin: auto;" /></p>
