Fixing Image problem

--- a/content/fun_fact/fun_fact.html
+++ b/content/fun_fact/fun_fact.html
@@ -8,3 +8,4 @@ output: html_document
 
 <p>It happens, although those remain rare one-time events, that my anger gets the best of me when I can’t figure out a code. Here is my latest example, while building this website:</p>
 <p><img src="/img/im10.jpg" width="60%" style="display: block; margin: auto;" /></p>
+<p>(This is a joke, of course, to display my great sense of humour as part of my portfolio.)</p>
